[gd_scene load_steps=2 format=3 uid="uid://baylpti05xolc"]

[ext_resource type="Script" path="res://ChallengeEntry.gd" id="1_lqgkf"]

[node name="ChallengeEntry" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_lqgkf")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBox"]
layout_mode = 2
text = "You have been challenged by "

[node name="ChallengerName" type="Label" parent="VBox/HBox"]
layout_mode = 2
text = "blank_name"

[node name="HBox2" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="AcceptChallenge" type="Button" parent="VBox/HBox2"]
layout_mode = 2
text = "Accept"

[node name="DeclineChallenge" type="Button" parent="VBox/HBox2"]
layout_mode = 2
text = "Decline"

[connection signal="pressed" from="VBox/HBox2/AcceptChallenge" to="." method="_on_accept_challenge_pressed"]
[connection signal="pressed" from="VBox/HBox2/DeclineChallenge" to="." method="_on_decline_challenge_pressed"]
